# DNM_filtering

./: .gitignore  AUTOMATIC_PLOTTING_GUIDE.md  AoU_filter.yaml  CHANGELOG.md  COLUMN_CONFIG_GUIDE.md  Dockerfile  FINAL_UPDATES.md  FIXES_APPLIED.md  INSTALLATION.md  LICENSE  PARAMETER_NAMING_GUIDE.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_START_PLOTTING.md  README.md  SYMMETRIC_RANGE_GUIDE.md  TROUBLESHOOTING.md  UKB_filter.yaml  diagnose_inf_issue.py  example_config.yaml  example_symmetric_config.yaml  example_usage.py  example_usage_three_stage.py  example_with_plotting.py  optimise_optuna_simplified.py  pyproject.toml  requirements.txt  test_stages.py
.github/workflows/: main.yml
old_docs/: ATTRIBUTE_FIX.md  COLUMN_MAPPING_FIX.md  COLUMN_NAMES_FIX.md  FIXING_INF_ISSUE.md  IMPLEMENTATION_COMPLETE.md  LATEST_CHANGES.md  MINIMUM_MAXIMUM_UPDATE.md  PACKAGE_RENAME.md  PLOTTING_IMPLEMENTATION.md  SYMMETRIC_RANGE_UPDATE.md  debug_optimization.py  deep_debug.py  example_usage.py  updated_plot_function.py
src/: __init__.py  api.py  cli.py  config.py  data.py  pipeline.py
src/dnm_harmoniser/: __init__.py  api.py  apply.py  apply_chunks.py  cli.py  config.py  data.py  pipeline.py  pipeline_memory_efficient.py  plotting.py  prox_filter.py  vaf_quality.py
src/dnm_harmoniser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_optimiser.py
