[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnm-harmoniser"
version = "0.1.0"
description = "Three-stage Bayesian optimization for genomic variant filtering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "University of Exeter", email = "contact@exeter.ac.uk"}
]
keywords = [
    "genomics",
    "variant-filtering",
    "optimization",
    "bayesian-optimization",
    "bioinformatics",
    "de-novo-mutations"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "optuna>=3.3",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "nbsphinx>=0.9",
    "sphinx-copybutton>=0.5",
]

viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

parallel = [
    "dask[complete]>=2023.1",
    "ray>=2.0",
]

all = [
    "dnm-harmoniser[dev,docs,viz,parallel]",
]

[project.scripts]
dnm-harmoniser = "dnm_harmoniser.cli:app"

[project.urls]
Homepage = "https://github.com/university-exeter/dnm-harmoniser"
Documentation = "https://dnm-harmoniser.readthedocs.io"
Repository = "https://github.com/university-exeter/dnm-harmoniser"
Issues = "https://github.com/university-exeter/dnm-harmoniser/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dnm_harmoniser*"]

[tool.setuptools.package-data]
dnm_harmoniser = ["configs/*.yaml", "configs/presets/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=dnm_harmoniser",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/dnm_harmoniser"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
